Skriver om til Jersey server og rydder i oppsett