@@ -48,6 +48,7 @@
         <ch.qos.logback.version>1.2.7</ch.qos.logback.version>
         <mockito.version>4.0.0</mockito.version>
         <jupiter.version>5.8.1</jupiter.version>
+        <jersey.version>2.35</jersey.version>
 
     </properties>
 
@@ -81,13 +82,15 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
+
             <dependency>
-                <groupId>org.jboss.resteasy</groupId>
-                <artifactId>resteasy-bom</artifactId>
-                <version>4.7.2.Final</version>
+                <groupId>org.glassfish.jersey</groupId>
+                <artifactId>jersey-bom</artifactId>
+                <version>${jersey.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpcomponents-client</artifactId>
@@ -567,6 +570,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>1.7.32</version>
+        </dependency>
 
 
         <!--    TEST    -->
@@ -596,6 +604,11 @@
                 <plugin>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>3.2.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -632,7 +645,6 @@
                     <version>3.0.0-M5</version>
                     <configuration>
                         <argLine>-Xms256m -Dfile.encoding=UTF-8 -Dlog.level.no.nav=WARN</argLine>
-                        <argLine>--illegal-access=permit</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
